# SRAM-IMC-logic-synthesis-tool

./: CMakeLists.txt  pla_convert.py  readme.md  run.sh
header files/: Global.h  divide_Terms_of_Function.h  get_Terms_of_Function.h  logical_Combination.h  logical_iteration.h  optimize_Methods.h  spatial_Combination.h
resource/: 9symf1.txt  clipf1.txt  clipf2.txt  clipf3.txt  clipf4.txt  clipf5.txt  con1f1.txt  con1f2.txt  duke2f2.txt  duke2f6.txt  exepf1.txt  rd53f1.txt  rd53f2.txt  rd53f3.txt  rd73f1.txt  rd73f2.txt  rd73f3.txt  rootf2.txt  sao2f1.txt  sao2f2.txt  sao2f3.txt  sao2f4.txt  ts10f1.txt
source files/: blossom_method.cpp  divide_Terms_of_Function.c  get_Terms_of_Function.c  logical_Combination.c  logical_iteration.c  main.c  optimize_Methods.c  spatial_Combination.c
